# DjangoCoffeMicro

./: .gitignore  README.md  docker-compose.yml  requirements.txt
auth_service/: Dockerfile  manage.py  requirements.txt
auth_service/auth_service/: api.py  asgi.py  settings.py  urls.py  wsgi.py
auth_service/authx/: authentication.py  common.py  jwt.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  viewsets.py
django-micro-auth/: LICENSE  README.rst  setup.cfg
django-micro-auth/authx/: apps.py  authentication.py  dbrouter.py  models.py  permissions.py  urls.py  utils.py  views.py
django-micro-auth/authx/migrations/: 0001_initial.py  0002_alter_customuser_options.py
django-micro-auth/django_micro_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
menu_service/: Dockerfile  manage.py  requirements.txt
menu_service/menu/: admin.py  models.py  serializers.py  urls.py  viewsets.py
menu_service/menu_service/: api.py  asgi.py  settings.py  urls.py  wsgi.py
message_service/: consumer.py  manage.py  requirements.txt
message_service/message/: consumers.py  models.py  routing.py  views.py
message_service/message_service/: asgi.py  settings.py  urls.py  wsgi.py
purchase_service/: consumer.py  filebeat.yml  manage.py  requirements.txt
purchase_service/purchase/: admin.py  middleware.py  models.py  producer.py  serializers.py  urls.py  views.py  viewsets.py
purchase_service/purchase_service/: api.py  asgi.py  settings.py  (+2 more)
story_service/: consumer.py  manage.py  requirements.txt
supplier_service/: Dockerfile  manage.py
(+31 files in other folders)
