[metadata]
name = django-micro-auth
version = 1.0
description = Django Microservices Authentication.
long_description = file: README.rst
url = https://www.sylwesterwalczak.pl/
author = Sylwester Walczak
author_email = sylwestermarekwalczak@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    django-cors-headers >= 3.11
    djangorestframework >= 3.13
    requests == 2.27.1
